force-app/main/default/objects/Activity/fields/AutomationChecked__c.field-meta.xml
<CustomField>
    <fullName>AutomationChecked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutomationChecked</label>
    <type>Checkbox</type>
</CustomField>