force-app/main/default/objects/Activity/fields/AutomationStarted__c.field-meta.xml
<CustomField>
    <fullName>AutomationStarted__c</fullName>
    <formula>DATEVALUE(CreatedDate) &gt;= DATE(2022,09,08)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AutomationStarted</label>
    <type>Checkbox</type>
</CustomField>