force-app/main/default/objects/Activity/fields/EmailMessageId__c.field-meta.xml
<CustomField>
    <fullName>EmailMessageId__c</fullName>
    <label>EmailMessageId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>