force-app/main/default/objects/Activity/fields/MME__EmailDate__c.field-meta.xml
<CustomField>
    <fullName>MME__EmailDate__c</fullName>
    <label>Email Date</label>
    <type>DateTime</type>
</CustomField>