force-app/main/default/objects/Activity/fields/MME__EmailDirection__c.field-meta.xml
<CustomField>
    <fullName>MME__EmailDirection__c</fullName>
    <label>Email Direction</label>
    <length>30</length>
    <type>Text</type>
</CustomField>