force-app/main/default/objects/Activity/fields/MME__EmailFromAddress__c.field-meta.xml
<CustomField>
    <fullName>MME__EmailFromAddress__c</fullName>
    <label>Email From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>