force-app/main/default/objects/Activity/fields/MME__EmailFromName__c.field-meta.xml
<CustomField>
    <fullName>MME__EmailFromName__c</fullName>
    <label>Email From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>