force-app/main/default/objects/Activity/fields/MME__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>MME__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>