force-app/main/default/objects/Activity/fields/MME__GUID__c.field-meta.xml
<CustomField>
    <fullName>MME__GUID__c</fullName>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>