force-app/main/default/objects/Activity/fields/MME__Type__c.field-meta.xml
<CustomField>
    <fullName>MME__Type__c</fullName>
    <label>MME Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>