force-app/main/default/objects/Activity/fields/OriginalRecordId__c.field-meta.xml
<CustomField>
    <fullName>OriginalRecordId__c</fullName>
    <label>OriginalRecordId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>