force-app/main/default/objects/Activity/fields/ResponseHandler__c.field-meta.xml
<CustomField>
    <fullName>ResponseHandler__c</fullName>
    <formula>IF(AND(WEEKDAY(DATEVALUE(CreatedDate))=6, (NOW()-CreatedDate)*24&gt;66), true,
IF(AND(WEEKDAY(DATEVALUE(CreatedDate))=7, (NOW()-CreatedDate)*24&gt;42), true,
IF(AND(WEEKDAY(DATEVALUE(CreatedDate))=1, (NOW()-CreatedDate)*24&gt;30), true,
IF((NOW()-CreatedDate)*24&gt;24, true,
false))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResponseHandler</label>
    <type>Checkbox</type>
</CustomField>