force-app/main/default/objects/Activity/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <formula>IF(  OwnerId  = $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User</label>
    <type>Checkbox</type>
</CustomField>