force-app/main/default/objects/Activity/fields/Test_Path__c.field-meta.xml
<CustomField>
    <fullName>Test_Path__c</fullName>
    <label>Test Path</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>